# seotool

./:  requirements.dev.txt  .gitignore  .mergify.yml  .pre-commit-config.yaml  Makefile  README.md  cli.py  conftest.py  crawl.py  dev-requirements.txt  gui.py  makefile  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  seotool-cli.py  seotool-gui.py  setup.cfg  setup.py
.circleci/: config.yaml  config.yml
.github/: dependabot.yml
engines/: __init__.py  dataModels.py  engines.py  exceptions.py  playwright.py  pyppeteer.py  requests.py
engines/tests/: test_playwright.py
plugins/: DuplicateH1.py  DuplicateMeta.py  DuplicateTitle.py  ExternalImages.py  ExternalLinks.py  ExternalLinksPerPage.py  IgnorePDF.py  IgnoreSearchPages.py  IgnoreURISchemes.py  ImgAltTags.py  Internal301.py  Internal404.py  LinkMap.py  MissingH1.py  MissingMeta.py  MultipleH1.py  RemoveCMSBar.py  ToPDF.py  __init__.py  scriptTags.py
processors/: __init__.py  dataModels.py  hookType.py  hookType.pyi  hookspecs.py  outputprocessor.py  preprocessor.py  processor.py
processors/plugins/: DuplicateContent.py  DuplicateH1.py  DuplicateMeta.py  DuplicateTitle.py  ExternalImages.py  ExternalImagesByURL.py  ExternalLinks.py  ExternalLinksByURL.py  IgnorePDF.py  IgnoreSearchPages.py  IgnoreURISchemes.py  ImageErrors.py  ImgAltTags.py  Internal301.py  Internal404.py  LinkMap.py  LogPrint.py  LogRich.py  MissingH1.py  MissingImgAltTags.py  MissingMeta.py  MultipleH1.py  OutputCSV.py  OutputHTML.py  OutputPDF.py  OutputSQLite.py  OutputText.py  ScriptTags.py  __init__.py  scriptTags.py
processors/plugins/tests/: test_DuplicateContent.py  test_DuplicateH1.py  test_DuplicateMeta.py  test_DuplicateTitle.py  test_ExternalImages.py  test_ExternalImagesByURL.py  test_ExternalLinks.py  test_ExternalLinksByURL.py  test_IgnorePDF.py  test_IgnoreSearchPages.py  test_IgnoreURISchemes.py  test_Internal301.py  test_Internal404.py  test_MissingH1.py  test_MissingImgAltTags.py  test_MissingMeta.py  test_MultipleH1.py  test_ScriptTags.py  test_image_errors.py
seotool/: cli.py  crawl.py  exceptions.py  queue.py  test_crawler.py
seotool/tests/: test_crawler.py
