[project]
name = "SEO Tool"
version = "2.0.1"
description = "Plugin based SEO Reporting Tool"
authors = [
    "Ben Gosney <bengosney@googlemail.com>"
]
python = "^3.8"
repository = "https://github.com/bengosney/seotool/"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py37']

[tool.pycln]
all = true

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:Using or importing the ABCs:DeprecationWarning',
]
