[metadata]
name = seotool
version = 2.2.2
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
install_requires =
    Jinja2
    beautifulsoup4
    click
    markdown
    pdfkit
    playwright
    pluggy
    pygments
    requests
    rich
python_requires = ~=3.10

[options.entry_points]
console_scripts =
    seo-crawl=seotool.cli:main
seo_engines =
    playwright=engines.playwright:playwright
    requests=engines.requests:requests

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 120
known_first_party = engines,processors, seotools
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
import_heading_future = Future
import_heading_stdlib = Standard Library
import_heading_thirdparty = Third Party
import_heading_firstparty = First Party
import_heading_localfolder = Locals

[pycodestyle]
max_line_length = 120

[flake8]
exclude = .git,*migrations*,node_modules,.history
max-line-length = 120
extend-ignore = E203

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
ignore_errors = False
ignore_missing_imports = True
implicit_reexport = False
strict_optional = True
strict_equality = True
no_implicit_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unreachable = True
warn_no_return = True
